Basic wishlist feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,9 @@ display: none !important;
 			<a class="navbar-item hidden-mobile" href="/minifigs">
 				Minifigs
 			</a> 
+			<a class="navbar-item hidden-mobile" href="/wishlist">
+				Wishlist
+			</a> 
 			<a class="navbar-item hidden-mobile" href="/config">
 				Config
 			</a>
